access.css
/*USER ACCOUNT CSS STUFF */

body{
margin:2.5% 0%;
background:rgba(255,255,255,1);

}

#gridLog {
	display:grid;
	grid-template-columns:repeat(3,1fr);
	grid-gap: 10px;

}

.colL{
	border-right:1px solid black;
	grid-column: 1fr;
	height:100%;
}

textarea {
	width:96%;
	height:100px;

}

.tab{
	border:2px solid rgba(205,205,205,0.85);
	padding:10px;
	width:48.3%;
	background:rgba(225,225,225,0.85);
	border-radius:10% 10% 0% 0%;
    margin-bottom: 0px;
    z-index:100;

}

#tabContent {

	border:1px solid black;
	width:94%;
	height:700px;
	padding:10px 0px 10px 10px;
	overflow: hidden;
	
}

.activeTab{
	border-color:rgba(105,105,105,0.85);
	color:white;
	background:rgba(155,155,155,0.85);
}

.post {
	width:93%;
	padding:10px;
	border:1px solid black;
	background:rgba(255, 255,255, 1);
	margin: 0% 30% 5% 0%;
	
}

.tag{
	color:white;
}

.tab_purpose{
	display:none;
	
}
.display{
	display:initial;

}

#board {
	grid-column: 2fr;
}

#wrapper_chat {
	padding:10%;
}

